<resources>
    <string name="app_name">极客社区</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">帐号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_email_hint">确认密码</string>
    <string name="login">登录</string>
    <string name="register">确定</string>
    <string name="register_txt1">点击</string>
    <string name="register_txt2">点击立即注册</string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索</string>
    <string name="main_tab_recent">消息</string>
    <string name="main_tab_home">主页</string>
    <string name="mian_tab_set">设置</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">名字</string>
    <string name="add_name">帐号</string>
    <string name="add_name_hint">请输入昵称</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人信息</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="toast_error_email">邮箱不能为空</string>
    <string name="blacklist">添加黑名单</string>
    <string name="chat">发消息</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消发送</string>
    <string name="settings_phone_code">验证码</string>
    <string name="settings_phone_tips">我们已经发送了%1$s到您的手机</string>
    <string name="zone_choose_pic_num">最多只能选择%1$s张图片！</string>
    <string name="network_offline">当前网络不可用，请检查网络设置</string>
    <string name="photo_size">%1$s/%2$s</string>
    <string name="load_ready">上拉加载更多</string>
    <string name="loading">松手加载数据</string>
    <string name="loaded">完成加载数据</string>

</resources>
