<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_tap_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/register_top"
        layout="@layout/top_layout" />

    <com.hotbitmapgg.geekcommunity.widget.SpringScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_username_hint"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/et_username"
                    style="@style/Register_Edit"
                    android:paddingLeft="10dp"
                    android:gravity="center|left"
                    android:textColor="@color/top_bar_bg"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_password_hint"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/Register_Edit"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_email_hint"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/Register_Edit"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="昵称"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_user_nice"
                    style="@style/Register_Edit"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="简介"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_user_school"
                    style="@style/Register_Edit"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="邮箱"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_user_email"
                    style="@style/Register_Edit"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_bg"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="设置性别"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sex_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/sex_arrow"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/sex_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/blue_corner_btn"
                android:text="@string/register"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </com.hotbitmapgg.geekcommunity.widget.SpringScrollView>

</LinearLayout>